kubernetes/applications/actual-budget/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: actual-server
  namespace: actualbudget
spec:
  serviceName: "actual-server"
  replicas: 1
  selector:
    matchLabels:
      app: actual-server
  template:
    metadata:
      labels:
        app: actual-server
    spec:
      automountServiceAccountToken: false
      containers:
        # Container
        - name: actual-server
          image: docker.io/actualbudget/actual-server:26.3.0-alpine
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          # Resources
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
              ephemeral-storage: 8Gi
            limits:
              cpu: 2000m
              memory: 1Gi
              ephemeral-storage: 8Gi
          # Ports
          ports:
            - name: actual-server
              containerPort: 5006
              protocol: TCP
          volumeMounts:
            - name: actual-server-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: actual-server-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 8Gi
